2011-03-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testcase for PartialBeliefState caching.
	* testsuite/testBeliefStateCaching.cpp: New testcase.

	* src/solver/RelSatSolver.cpp: Cache input and output.
	* include/solver/RelSatSolver.h: Likewise.

	* include/mcs/BeliefState.h: Add helper functions for PartialBeliefState caching.

	* src/dmcs/OptDMCS.cpp: Before combining, just project the local
	theory away (keep guessing parts from the neighbors).

	* include/dmcs/BeliefCombination.h: Add project to just a position.
	* src/dmcs/BeliefCombination.cpp: Likewise.

2011-03-13  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Clean up.

	* include/network/OutputThread.h: If EOF then always return EOF
	wrt NEXT request.
	* src/network/OutputThread.cpp: Likewise.

	* include/network/JoinThread.h: Implementing stateful Joiner.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* include/network/AsynClient.tcc: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.

2011-03-12  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: On implementing stateful Joiner.
	* src/network/JoinThread.cpp: Likewise.

	* include/dmcs/StreamingDMCS.h: Notify Joiner.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/dmcs/ConflictNotification.h: Inlucde pack_size in the
	notification.

2011-03-11  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/OutputThread.h: Stateless OutputThread.
	* src/network/OutputThread.cpp: Likewise.

2011-03-11  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingBackwardMessage.h: Combine partial belief states and session id into ModelSessionId.
	* src/network/OutputThread.cpp: Likewise.