@@ -1,3 +1,11 @@
+2011-03-15  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/NeighborOut.h: Fix memory leaks.
+	* src/solver/RelSatSolver.cpp: Likewise.
+	* src/network/OutputThread.cpp: Likewise.
+	* src/network/JoinThread.cpp: Likewise.
+	* src/dmcs/StreamingDMCS.cpp: Likewise.
+
 2011-03-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
 	* testsuite/Makefile.am: Add testcase for PartialBeliefState caching.
